--- a/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
@@ -144,6 +144,6 @@
   }
 }
 
-.quill-editor-style.card.ng-invalid .ql-container.ql-snow {
+.quill-editor-style.card.invalid .ql-container.ql-snow {
   border-color: $secondaryColor;
 }
