--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-descripcion-del-proceso-de-seleccion/form-descripcion-del-proceso-de-seleccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-descripcion-del-proceso-de-seleccion/form-descripcion-del-proceso-de-seleccion.component.html
@@ -860,9 +860,9 @@
                     for="responsableEquipoTecnico"
                     class="label-left"
                     [class.color-secondaryColor]="
-                      (addressForm.get('responsableEquipoTecnico').invalid &&
+                      (addressForm.get('responsableEquipoTecnico')?.invalid &&
                         addressForm.get('responsableEquipoTecnico').touched) ||
-                      (addressForm.get('responsableEquipoTecnico').invalid && estaEditando)
+                      (addressForm.get('responsableEquipoTecnico')?.invalid && estaEditando)
                     "
                   >
                     Responsable del equipo técnico
