--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/ver-detalle-editar-actuacion-proceso/ver-detalle-editar-actuacion-proceso.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/ver-detalle-editar-actuacion-proceso/ver-detalle-editar-actuacion-proceso.component.html
@@ -72,7 +72,11 @@
                                 <div class="text-area-quill auxBox">
                                     <quill-editor class="quill-editor-style card" [styles]="editorStyle"
                                         [modules]="config" required (onContentChanged)="maxLength($event, 2000)"
-                                        formControlName="actuacionAdelantada" #actuacionAdelantada>
+                                        formControlName="actuacionAdelantada" #actuacionAdelantada
+                                        [class.invalid]="
+                                        (addressForm.get('actuacionAdelantada').invalid && addressForm.get('actuacionAdelantada').touched) ||
+                                        (addressForm.get('actuacionAdelantada').invalid && estaEditando)
+                                      ">
                                     </quill-editor>
                                 </div>
                                 <span class="contador miles" *ngIf="addressForm.controls.actuacionAdelantada.value">
@@ -116,7 +120,11 @@
                                 <div class="text-area-quill auxBox">
                                     <quill-editor class="quill-editor-style card" [styles]="editorStyle"
                                         [modules]="config" required (onContentChanged)="maxLength($event, 2000)"
-                                        formControlName="proximaActuacionRequerida" #proximaActuacionRequerida>
+                                        formControlName="proximaActuacionRequerida" #proximaActuacionRequerida
+                                        [class.invalid]="
+                                        (addressForm.get('proximaActuacionRequerida').invalid && addressForm.get('proximaActuacionRequerida').touched) ||
+                                        (addressForm.get('proximaActuacionRequerida').invalid && estaEditando)
+                                      ">
                                     </quill-editor>
                                 </div>
                                 <span class="contador miles"
@@ -228,7 +236,11 @@
                                 <div class="text-area-quill auxBox">
                                     <quill-editor class="quill-editor-style card" [styles]="editorStyle"
                                         [modules]="config" required (onContentChanged)="maxLength($event, 2000)"
-                                        formControlName="observaciones" #observaciones>
+                                        formControlName="observaciones" #observaciones
+                                        [class.invalid]="
+                                        (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                        (addressForm.get('observaciones').invalid && estaEditando)
+                                      ">
                                     </quill-editor>
                                 </div>
                                 <span class="contador miles" *ngIf="addressForm.controls.observaciones.value">
