--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
@@ -66,9 +66,9 @@
     <mat-accordion formArrayName="perfiles" *ngIf="formContratista.get( 'numeroContratos' ).value !== null">
         <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let perfil of perfiles.controls; index as i" [formGroup]="perfil">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" style="text-transform: capitalize;" 
-                [ngClass]="{'sin-diligenciar': perfil.get('registroCompleto').value == null,'en-proceso': !perfil.get('registroCompleto').value,'completo':perfil.get('registroCompleto').value}">
-                {{textoConvocantes}} {{ i+1 }}
+                <mat-panel-title class="expansion-style--title 
+                {{ perfil.get('registroCompleto').value == null ? 'sin-diligenciar' : !perfil.get('registroCompleto').value ? 'en-proceso' : 'completo' }}">
+                    {{textoConvocantes}} {{ i+1 }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
