--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/form-registrar-seguimiento/form-registrar-seguimiento.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/form-registrar-seguimiento/form-registrar-seguimiento.component.scss
@@ -1,3 +1,9 @@
 .mat-card {
   padding-bottom: 2em !important;
 }
+.auxBox{
+  border: 0px; 
+  padding: .5em 0em 0.2em; 
+  border-radius: 0px;
+  margin-bottom: .5em;
+}
