--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -4,10 +4,10 @@
             <mat-card-title class="header-card--text">
                 {{ 
                     novedadDescripcion.tipoNovedadCodigo == "1" ? 'Suspension' :
-                    tipoNovedad == "2" ? 'Prórroga a la Suspensión' : 
-                    tipoNovedad == "3" ? 'Adición' : 
-                    tipoNovedad == "4" ? 'Prorroga' :
-                    tipoNovedad == "5" ? 'Modificación de Condiciones Contractuales' : ''
+                    novedadDescripcion.tipoNovedadCodigo == "2" ? 'Prórroga a la Suspensión' : 
+                    novedadDescripcion.tipoNovedadCodigo == "3" ? 'Adición' : 
+                    novedadDescripcion.tipoNovedadCodigo == "4" ? 'Prorroga' :
+                    novedadDescripcion.tipoNovedadCodigo == "5" ? 'Modificación de Condiciones Contractuales' : ''
                 }}
             </mat-card-title>
         </mat-card-header>
