--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-costo-variable-gog/form-costo-variable-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-costo-variable-gog/form-costo-variable-gog.component.html
@@ -13,11 +13,12 @@
               <label
                 class="label-left"
                 for="tipoAportante"
-                [class.color-secondaryColor]="
+                 
+              >
+              <!-- [class.color-secondaryColor]="
                   (addressForm.get('tipoAportante').invalid && addressForm.get('tipoAportante').touched) ||
                   (addressForm.get('tipoAportante').invalid && estaEditando)
-                "
-              >
+                " -->
                 Tipo de aportante
               </label>
             </div>
@@ -38,11 +39,12 @@
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
-                *ngIf="
+                
+              />
+              <!-- *ngIf="
                   (addressForm.get('tipoAportante').invalid && addressForm.get('tipoAportante').touched) ||
                   (addressForm.get('tipoAportante').invalid && estaEditando)
-                "
-              />
+                " -->
             </span>
           </div>
         </div>
@@ -54,11 +56,12 @@
               <label
                 class="label-left"
                 for="nombreAportante"
-                [class.color-secondaryColor]="
+                
+              >
+              <!-- [class.color-secondaryColor]="
                   (addressForm.get('nombreAportante').invalid && addressForm.get('nombreAportante').touched) ||
                   (addressForm.get('nombreAportante').invalid && estaEditando)
-                "
-              >
+                " -->
                 Nombre del aportante
               </label>
             </div>
@@ -79,11 +82,14 @@
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
-                *ngIf="
+                
+              />
+
+              <!-- *ngIf="
                   (addressForm.get('nombreAportante').invalid && addressForm.get('nombreAportante').touched) ||
                   (addressForm.get('nombreAportante').invalid && estaEditando)
-                "
-              />
+                "  -->
+
             </span>
           </div>
         </div>
@@ -95,11 +101,14 @@
               <label
                 class="label-left"
                 for="fuenteRecursos"
-                [class.color-secondaryColor]="
+                
+              >
+
+              <!-- [class.color-secondaryColor]="
                   (addressForm.get('fuenteRecursos').invalid && addressForm.get('fuenteRecursos').touched) ||
                   (addressForm.get('fuenteRecursos').invalid && estaEditando)
-                "
-              >
+                " -->
+
                 Fuente de los recursos
               </label>
             </div>
@@ -120,11 +129,14 @@
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
-                *ngIf="
+                
+              />
+
+              <!-- *ngIf="
                   (addressForm.get('fuenteRecursos').invalid && addressForm.get('fuenteRecursos').touched) ||
                   (addressForm.get('fuenteRecursos').invalid && estaEditando)
-                "
-              />
+                " -->
+
             </span>
           </div>
         </div>
@@ -136,11 +148,14 @@
               <label
                 class="label-left"
                 for="valorDescuento"
-                [class.color-secondaryColor]="
+                
+              >
+
+              <!-- [class.color-secondaryColor]="
                   (addressForm.get('valorDescuento').invalid && addressForm.get('valorDescuento').touched) ||
                   (addressForm.get('valorDescuento').invalid && estaEditando)
-                "
-              >
+                " -->
+
                 Valor del descuento
               </label>
             </div>
@@ -174,11 +189,14 @@
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
-                  *ngIf="
+                  
+                />
+
+                <!-- *ngIf="
                     (addressForm.get('valorDescuento').invalid && addressForm.get('valorDescuento').touched) ||
                     (addressForm.get('valorDescuento').invalid && estaEditando)
-                  "
-                />
+                  " -->
+
               </span>
             </div>
           </div>
