--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-pasiva-dj/form-convocados-pasiva-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-pasiva-dj/form-convocados-pasiva-dj.component.html
@@ -26,9 +26,7 @@
             [formGroup]="perfil">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title 
-                {{ perfil.get('registroCompleto').value == null ? 
-                'sin-diligenciar' : !perfil.get('registroCompleto').value ? 
-                        'en-proceso' : 'completo' }}">
+                {{ perfil.get('registroCompleto').value == null ? 'sin-diligenciar' : !perfil.get('registroCompleto').value ? 'en-proceso' : 'completo' }}">
                     Convocado {{ i+1 }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
