--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
@@ -289,7 +289,9 @@
 <mat-accordion *ngIf="this.addressForm.value.demandaContraFFIE==false" class="animatedDown">
     <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
+            <mat-panel-title class="expansion-style--title "
+            [ngClass]="{'sin-diligenciar':convocado_class===0,'en-proceso':convocado_class===1,'completo':convocado_class===2}"
+            >
                 Convocados
             </mat-panel-title>
         </mat-expansion-panel-header>
