--- a/asivamosffie.web/asivamosffie/src/assets/scss/_cards.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_cards.scss
@@ -56,3 +56,11 @@ mat-card.mat-card {
 .border {
     border: solid 1px rgba(0,0,0,.54) !important;
 }
+
+.card-subTitle-detalle {
+    background-color: rgba(0, 0, 0, 0.735) !important;
+}
+
+.card-title-detalle {
+    color: #000000bd !important;
+}
