Ajustes procesos seleccion

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-seleccionados/form-datos-proponentes-seleccionados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-seleccionados/form-datos-proponentes-seleccionados.component.html
@@ -536,7 +536,7 @@
                   #representanteLegal2
                   type="text"
                   maxlength="1000"
-                  [formControl]="representanteLegal"
+                  formControlName="representanteLegal"
                   required
                   [matAutocomplete]="auto4"
                 />
