--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/invitacion-cerrada/invitacion-cerrada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/invitacion-cerrada/invitacion-cerrada.component.html
@@ -60,7 +60,8 @@
                 #proponenteCerrada
                 [procesoSeleccion]="procesoSeleccion"
                 [editar]="bitPuedoEditar"
-                (guardar)="onSubmit()">
+                (guardar)="onSubmit()"
+                [style.pointer-events]="getStyleEvaluacion()">
             </app-form-datos-proponentes-seleccionados-invitacion-cerrada>
         </mat-expansion-panel>
 
@@ -96,7 +97,8 @@
         </mat-expansion-panel>
 
     </mat-accordion>
-     <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em" *ngIf="procesoSeleccion.estadoProcesoSeleccionCodigo!=estadosProcesoSeleccion.AprobadaAperturaPorComiteFiduciario">
+     <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em" 
+     *ngIf="mostrarAyudaProcesoAprobado();" >
     Cuando la solicitud se encuentra en estado <b>“Aprobada apertura de comité fiduciario”</b> el sistema habilitará las opciones para continuar el proceso.
     </div>
 </div>
