--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-procesos/tabla-procesos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-procesos/tabla-procesos.component.html
@@ -39,13 +39,13 @@
             <ng-container matColumnDef="estadoDelRegistro">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
                 <td mat-cell *matCellDef="let element">
-                    <div class="flex-span" *ngIf="element.esCompleto === true">
+                    <div class="flex-span" *ngIf="esCompleto( element )">
                         <span class="info-text completo mr-auto m0"></span>
                         <span>
                             {{ 'Completo' }}
                         </span>
                     </div>
-                    <div class="flex-span" *ngIf="element.esCompleto !== true">
+                    <div class="flex-span" *ngIf="!esCompleto( element )">
                         <span class="info-text sin-diligenciar mr-auto  m0"></span>
                         <span>
                             {{ 'Incompleto' }}
